--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,6 +29,15 @@ jobs:
         with:
           install-bun: "false"
 
+      - name: Verify tag is on main
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+        run: |
+          git fetch origin main
+          git merge-base --is-ancestor ${{ github.sha }} origin/main || {
+            echo "::error::Tagged commit must be on main branch. Merge to main first, then tag."
+            exit 1
+          }
+
       - name: Build package artifacts
         run: pnpm build && pnpm ui:build
 
