--- a/scripts/docker/install-sh-nonroot/Dockerfile
+++ b/scripts/docker/install-sh-nonroot/Dockerfile
@@ -12,6 +12,8 @@ RUN set -eux; \
     ca-certificates \
     curl \
     sudo \
+    unzip \
+    xz-utils \
   && rm -rf /var/lib/apt/lists/*
 
 RUN useradd -m -s /bin/bash app \
